2013-01-25

	* libsylph/mh.c: mh_scan_tree_recursive(): limit the recursion level
	  to 64.

2013-01-25

	* src/prefs_filter_edit.c: prefs_filter_edit_action_hbox_to_action():
	  check the existence of destination folder.

2013-01-24

	* libsylph/pop.c
	  src/inc.c: do not disconnect immediately but send QUIT on normal
	  POP3 errors.
	* libsylph/pop.c: set Pop3Session::state to POP3_ERROR if QUIT
	  fail.

2013-01-22

	* src/main.c
	  src/plugin.c: added safe mode (don't load plug-ins).

2013-01-22

	* libsylph/folder.c
	  libsylph/news.c
	  libsylph/imap.c: escape server name when creating cache directory
	  path (fixes IPv6 address on Windows).

2013-01-22

	* libsylph/imap.c: made "INBOX" case insensitive (follow RFC 3501).

2012-11-20

	* libsylph/socket.c: sock_connect_with_timeout(): enabled timeout
	  setting on Windows.

2012-10-30

	* version 3.3.0

2012-10-30

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2012-10-29

	* src/textview.c: fixed hyperlink when 'Show attached files first on
	  message view' option was set ([sylpheed:35477]).

2012-10-12

	* libsylph/imap.c: fixed MSVC compilation (thanks to Gisle Vanem).

2012-10-10

	* nsis/sylpheed.nsi
	  Makefile.am
	  sylpheed-mailto-protocol_admin.reg
	  sylpheed-mailto-protocol.reg: updated Windows registry entry file.

2012-10-10

	* nsis/sylpheed.nsi: fixed a typo in writing registry.

2012-10-10

	* libsylph/Makefile.am
	  src/Makefile.am
	  plugin/test/Makefile.am
	  plugin/attachment_tool/Makefile.am: removed includedir from include
	  path in Makefiles (thanks to Valentine Barshak).

2012-10-05

	* configure.in: raised the required GTK+ version to 2.8.0.

2012-10-05

	* nsis/english.nsh
	  nsis/japanese.nsh
	  nsis/sylpheed-defs.nsh
	  nsis/sylpheed.nsi: .eml file association was added.
	  Automatically set the default mailto and .eml handler on Windows 7.

2012-09-28

	* version 3.3.0beta2

2012-09-27

	* sylpheed.desktop: added the following line (#83):