@@ -1,3 +1,8 @@
+2013-01-30
+
+	* src/rpop3.c: made button sensitivity and Stop/Refresh label
+	  consistent.
+
 2013-01-25
 
 	* libsylph/mh.c: mh_scan_tree_recursive(): limit the recursion level
